fixed extra space in some solutions,

--- a/src/views/Test/SingleTest/singleTest.module.css
+++ b/src/views/Test/SingleTest/singleTest.module.css
@@ -3,6 +3,7 @@
 	filter: drop-shadow(0px 0px 10px rgba(87, 98, 142, 0.25));
 	background-color: #ffffff;
 	border-radius: 1rem;
+	overflow: hidden;
 }
 .container {
 	/* width: 70%; */
